--- a/projects/primary-icon-button-directive/package.json
+++ b/projects/primary-icon-button-directive/package.json
@@ -2,8 +2,10 @@
   "name": "primary-icon-button-directive",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^18.1.0",
-    "@angular/core": "^18.1.0"
+    "@angular/common": "^18.0.0",
+    "@angular/core": "^18.0.0",
+    "button-base": "^0.0.1",
+    "icon-button-base": "^0.0.1"
   },
   "dependencies": {
     "tslib": "^2.3.0"
